FUL-2540: Code clean and fixes Fixed lowercase - uppercase detection making it utf compatible Changed 'input' event to 'keyup' in order to get it working on ie9 Fixed naming issues

--- a/jquery.password_field.sass
+++ b/jquery.password_field.sass
@@ -44,6 +44,7 @@ ul.password-validity
         display: none
 
 $invalid-color: #DE404D
+#TODO should be replace
 $good-color: #FCE147
 $strong-color: #1E9E73
 
@@ -56,7 +57,6 @@ $strong-color: #1E9E73
         padding: 3px 0
         border: 0
         font-size: 0
-
         li
             width: calc(33% - 2px)
             display: inline-block
@@ -65,16 +65,15 @@ $strong-color: #1E9E73
             margin: 0 1px
             padding: 0
             border: 0
-    div.password-strength-text .help
-        display: none
+
+
 
     &[data-strength='invalid']
         li.invalid
             background-color: $invalid-color
         div.password-strength-text
             color: $invalid-color
-            .help
-                display: inline
+
     &[data-strength='good']
         li.good, li.invalid
             background-color: $good-color
@@ -86,14 +85,23 @@ $strong-color: #1E9E73
         div.password-strength-text
             color: $strong-color
 
+
     .password-strength-text
         text-align: center
-        span
-            cursor: pointer
 
         @media (min-width: 769px)
             position: absolute
             right: 0
-            span
-                cursor: default
 
+        span
+            cursor: default
+            @media (max-width: 768px)
+                cursor: pointer
+
+    //Help icon
+    div.password-strength-text .help
+        display: none
+
+    @media (max-width: 768px)
+        &[data-strength='invalid'] div.password-strength-text .help
+            display: inline
